discussion/kv_engine/173916/173916_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51805: Pass persistedPrepareSeqno(maxPrepareSeqno) to CkptMgr

We will set the value of the first Checkpoint to this value in a
future change to ensure that the on disk HPS is correctly updated
if we partially persist a snapshot, restart, and find on streaming
the rest of the snapshot that it does not contain any prepares.

Change-Id: Icc3f1b431c0458005420dfe5c07822128b853c0e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-04 13:53:27.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-04 13:53:51.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/297536/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-04 15:40:49.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/140/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/140/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/140/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/144/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/144/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/142/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_nexus_couchstore_magma_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_nexus_couchstore_magma_value_only
[2022-05-04T15:10:04.675Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1794: Failure
[2022-05-04T15:10:04.675Z] Expected equality of these values:
[2022-05-04T15:10:04.675Z]   err
[2022-05-04T15:10:04.675Z]     Which is: would block
[2022-05-04T15:10:04.675Z]   store->getMetaData( key_1, vbid, cookie, metadata, deleted, datatype)
[2022-05-04T15:10:04.675Z]     Which is: no memory
[2022-05-04T15:10:04.675Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1799: Failure
[2022-05-04T15:10:04.675Z] Expected equality of these values:
[2022-05-04T15:10:04.675Z]   cb::engine_errc::success
[2022-05-04T15:10:04.675Z]     Which is: success
[2022-05-04T15:10:04.675Z]   store->getMetaData( key_1, vbid, cookie, metadata, deleted, datatype)
[2022-05-04T15:10:04.675Z]     Which is: no memory
[2022-05-04T15:10:04.675Z] unknown file: Failure
[2022-05-04T15:10:04.675Z] C++ exception with description "StoredValue::setBySeqno: to (which is 0) must be positive" thrown in the test body.
[2022-05-04T15:10:04.675Z] [  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_nexus_couchstore_magma_value_only, where GetParam() = "bucket_type=persistent:backend=nexus:nexus_primary_backend=couchstore:nexus_secondary_backend=magma:item_eviction_policy=value_only" (110 ms)
EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_nexus_couchstore_magma_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/142/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/174/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/138/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/139/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/141/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/142/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/145/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/133/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-06 09:00:14.000000000
Message: 
Patch Set 3:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/140/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/140/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/140/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/174/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/138/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/139/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/141/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/177/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/142/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/145/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/133/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/172/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-09 06:55:47.000000000
Message: 
Patch Set 3: Verified+1

(1 comment)
File Comment: /PATCHSET_LEVEL -> clang tidy issue known bug
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-09 06:55:48.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-09 06:55:50.000000000
Message: 
Removed Code-Review-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-11 09:02:01.000000000
Message: 
Patch Set 3: Code-Review+2

(1 comment)
Line:157, engines/ep/src/checkpoint_manager.h -> Nit: We can expand with something like ".. set by PPS at warmup ..", nice to have a quick info on the context

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-11 11:40:42.000000000
MISMATCHED INLINE COMMENT
Line:157, engines/ep/src/checkpoint_manager.h -> Done
----------------------------------------------------------------------------------------------------------------------
